kubernetes/ingress-configuration/ngnix-ingress/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: product-frontend-service
          servicePort: 8080
      - path: /api/?(.*)
        backend:
          serviceName: product-orch-service
          servicePort: 8080
